--- a/Chinpumpapa.html
+++ b/Chinpumpapa.html
@@ -7,7 +7,9 @@
     <script>
         // 1 es piedra, 2 es papel, 3 es tijeras
         let jugardor = 0;
-        let pc = 2;
+        let min = 1;
+        let max = 3;
+        let pc = Math.floor(Math.random() * (max - min + 1) + min);
         jugardor = prompt("Elige una opción: 1. Piedra, 2. Papel, 3. Tijeras");
         // Mostrar elección del jugador
         if (jugardor == 1) {
