--- a/Chinpumpapa.html
+++ b/Chinpumpapa.html
@@ -5,49 +5,60 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Piedra, papel o tijeras</title>
     <script>
-        // 1 es piedra, 2 es papel, 3 es tijeras
-        let jugardor = 0;
-        let min = 1;
-        let max = 3;
-        let pc = Math.floor(Math.random() * (max - min + 1) + min);
-        jugardor = prompt("Elige una opción: 1. Piedra, 2. Papel, 3. Tijeras");
-        // Mostrar elección del jugador
-        if (jugardor == 1) {
+        
+        function obtenerEleccionJugador() {
+            let jugardor = prompt("Elige una opción: 1. Piedra, 2. Papel, 3. Tijeras");
+            if (jugardor == 1) {
             alert("El jugador elige ✊");
-        } else if (jugardor == 2) {
+            } else if (jugardor == 2) {
             alert("El jugador elige ✋");
-        } else if (jugardor == 3) {
+            } else if (jugardor == 3) {
             alert("El jugador elige ✌️");
-        } else {
+            } else {
             alert("Opción no válida");
+            return obtenerEleccionJugador();
+            }
+            return jugardor;
         }
 
-        // Mostrar elección de la PC
-        if (pc == 1) {
+        function obtenerEleccionPC() {
+            let min = 1;
+            let max = 3;
+            let pc = Math.floor(Math.random() * (max - min + 1) + min);
+            if (pc == 1) {
             alert("La 🤖 elige ✊");
-        } else if (pc == 2) {
+            } else if (pc == 2) {
             alert("La 🤖 elige ✋");
-        } else if (pc == 3) {
+            } else if (pc == 3) {
             alert("La 🤖 elige ✌️");
+            }
+            return pc;
         }
 
-        // Enfrentamiento
-        if (jugardor == pc) {
+        function determinarGanador(jugardor, pc) {
+            if (jugardor == pc) {
             alert("Es un empate");
-        } else if ((jugardor == 1 && pc == 3) || (jugardor == 2 && pc == 1) || (jugardor == 3 && pc == 2)) {
+            } else if ((jugardor == 1 && pc == 3) || (jugardor == 2 && pc == 1) || (jugardor == 3 && pc == 2)) {
             alert("¡El jugador gana!");
-        } else {
+            } else {
             alert("La 🤖 gana");
+            }
         }
 
-        // Volver a jugar
         function volverAJugar() {
+            if (confirm("¿Quieres volver a jugar?")) {
             location.reload();
+            }
         }
 
-        if (confirm("¿Quieres volver a jugar?")) {
+        function jugar() {
+            let jugardor = obtenerEleccionJugador();
+            let pc = obtenerEleccionPC();
+            determinarGanador(jugardor, pc);
             volverAJugar();
         }
+
+        jugar();
     </script>
 </head>
 <body>
