--- a/PokeLol/PokeLol.html
+++ b/PokeLol/PokeLol.html
@@ -24,8 +24,8 @@
     <section id="Select_atack">
       <h2>Selecciona tu ataque</h2>
 
-      <p>Tu mascota <span id="mascota-jugador"></span> tiene <span>3</span> vidas</p>
-      <p><span id="mascota-enemigo"></span> de tu enemigo tiene <span>3</span> vidas</p>
+      <p>Tu mascota <span id="mascota-jugador"></span> tiene <span id="VidaPlayer">3</span> vidas</p>
+      <p><span id="mascota-enemigo"></span> de tu enemigo tiene <span id="VidaRival">3</span> vidas</p>
       <p>
         <button id="Ataque_fuego">Fuego 🔥</button>
         <button id="Ataque_agua">Agua 💦</button>
