Empieza la decoracion css

--- a/PokeLol/PokeLol.html
+++ b/PokeLol/PokeLol.html
@@ -5,9 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>PuchaMon</title>
     <script src="PokeLol.js"></script>
+    <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <h1>PuchaMon. 🔥💦☘️</h1>
+    <h1 id ="Titulo">PuchaMon. 🔥💦☘️</h1>
     <section id="Select_PuchaMon">
       <h2>Selecciona tu PuchaMon</h2>
 
