--- a/PokeLol/PokeLol.html
+++ b/PokeLol/PokeLol.html
@@ -8,37 +8,63 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <h1 id ="Titulo">PuchaMon. 🔥💦☘️</h1>
     <section id="Select_PuchaMon">
-      <h2>Selecciona tu PuchaMon</h2>
-
-      <label for="Charmander">Charmander</label>
-      <input type="radio" name="PuchaMon" id="Charmander" />
-      <label for="Squirtle">Squirtle</label>
-      <input type="radio" name="PuchaMon" id="Squirtle" />
-      <label for="Bulbasaur">Bulbasaur</label>
-      <input type="radio" name="PuchaMon" id="Bulbasaur" />
-
+      <h1 id="Titulo">PuchaMon. 🔥💦☘️</h1>
+      <h2 class="subtitulo">Selecciona tu PuchaMon</h2>
+      <div class="tarjeta">
+        <label class="tarjeta-puchamon" for="Charmander">
+          <p>Charmander</p>
+          <img
+            src="https://assets.pokemon.com/assets/cms2/img/pokedex/full/004.png"
+            alt="Charmander"
+          />
+        </label>
+        <input type="radio" name="PuchaMon" id="Charmander" />
+        <label class="tarjeta-puchamon" for="Squirtle"
+          ><p>Squirtle</p>
+          <img
+            src="https://assets.pokemon.com/assets/cms2/img/pokedex/full/007.png"
+            alt="Squirtle"
+          />
+        </label>
+        <input type="radio" name="PuchaMon" id="Squirtle" />
+        <label class="tarjeta-puchamon" for="Bulbasaur"
+          ><p>Bulbasaur</p>
+          <img
+            src="https://assets.pokemon.com/assets/cms2/img/pokedex/full/001.png"
+            alt="Bulbasaur"
+          />
+        </label>
+        <input type="radio" name="PuchaMon" id="Bulbasaur" />
+      </div>
       <button id="BotonPuchamon">Seleccionar</button>
     </section>
 
     <section id="Select_atack">
-      <h2>Selecciona tu ataque</h2>
+      <h1 id="Titulo">PuchaMon. 🔥💦☘️</h1>
+      <h2 class="subtitulo">Selecciona tu ataque</h2>
 
-      <p>Tu mascota <span id="mascota-jugador"></span> tiene <span id="VidaPlayer">3</span> vidas</p>
-      <p><span id="mascota-enemigo"></span> de tu enemigo tiene <span id="VidaRival">3</span> vidas</p>
-      <p>
+      <div>
         <button id="Ataque_fuego">Fuego 🔥</button>
         <button id="Ataque_agua">Agua 💦</button>
         <button id="Ataque_planta">Planta ☘️</button>
-      </p>
-    </section>
-
-    <section id="Mensaje_Resultado">
-
-    </section>
-    <section id="reiniciar">
-      <button id ="Boton_reiniciar">Reiniciar</button>
+      </div>
+      <div>
+        <section id="Mensaje_Resultado"></section>
+        <section id="reiniciar">
+          <button id="Boton_reiniciar">Reiniciar</button>
+        </section>
+      </div>
+      <div>
+        <p>
+          Tu mascota <span id="mascota-jugador"></span> tiene
+          <span id="VidaPlayer">3</span> vidas
+        </p>
+        <p>
+          <span id="mascota-enemigo"></span> de tu enemigo tiene
+          <span id="VidaRival">3</span> vidas
+        </p>
+      </div>
     </section>
   </body>
 </html>
